kubernetes/development/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-database
  labels:
    project: meicm-bm
    name: bookmanager-database
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-database
  template:
    metadata:
      labels:
        name: bookmanager-database
        project: meicm-bm
    spec:
      containers:
      - name: bookmanager-mongo
        image: mongo
        imagePullPolicy: Always
        resources: {}
      restartPolicy: Always
