kubernetes/development/history-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-history
  labels:
    project: meicm-bm
    name: bookmanager-history
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-history
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-history
    spec:
      containers:
      - name: bookmanager-history
        ports:
        - containerPort: 10000
        image: bookmanager_history_service:1.0.0
        imagePullPolicy: Never
        resources: {}
      restartPolicy: Always
