kubernetes/development/tracking-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  bookmanager-tracking
  labels:
    name: bookmanager-tracking
spec:
  selector:
    name: bookmanager-tracking
  type:  NodePort
  ports:
  - port:  10003
    targetPort:  10003
