kubernetes/development/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: meicm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: bookmanager.meicm
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: bookmanager-frontend
              servicePort: 8081
